# ventura-repo

./: AUTHORS  ChangeLog  Makefile.in  NEWS  README.md  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.in
app-containers/cri-o/: Manifest  cri-o-1.29.13.ebuild
app-containers/cri-tools/: Manifest  cri-tools-1.29.0.ebuild
app-emulation/qemu/: Manifest  qemu-9.2.3-r3.ebuild
dev-cpp/gtest/: Manifest  gtest-1.15.2.ebuild
dev-libs/intel-level-zero-npu/: intel-level-zero-npu-9999.ebuild
eclass/: apache-3.eclass  apache-4.eclass
media-sound/pasystray/: pasystray-9999.ebuild
metadata/: layout.conf
net-analyzer/mbrowse/: mbrowse-0.4.3-r1.ebuild
profiles/: repo_name
sci-mathematics/octave/: Manifest  octave-9.1.0.ebuild  octave-9.3.0.ebuild
sci-ml/ollama/: Manifest  README.md  ollama-0.20.0.ebuild  ollama-0.20.3.ebuild  ollama-0.20.4.ebuild  ollama-0.21.0.ebuild
src/: Makefile.am  Makefile.in  bookmarks.c  bookmarks.h  callbacks.c  callbacks.h  configuration.c  configuration.h  details.c  details.h  icons.h  interface.c  interface.h  main.c  mibtree.c  mibtree.h  os.h  search.c  search.h  snmpstuff.c  snmpstuff.h  version.h
sys-cluster/kube-proxy/: kube-proxy-1.29.2.ebuild
sys-cluster/kubeadm/: Manifest  kubeadm-1.29.15.ebuild  kubeadm-1.29.2.ebuild
sys-cluster/kubectl/: kubectl-1.29.15.ebuild  kubectl-1.29.2.ebuild
sys-cluster/kubelet/: kubelet-1.29.15.ebuild  kubelet-1.29.2.ebuild
sys-libs/intel-driver-compiler-npu/: Manifest  README.txt  intel-driver-compiler-CMAKE.txt  intel-driver-compiler-README.txt  intel-driver-compiler-metadata.xml  intel-driver-compiler-npu-1.30.0.ebuild
sys-libs/intel-level-zero-npu/: intel-level-zero-npu-1.30.0.ebuild  metadata.xml  (+1 more)
(+17 files in other folders)
